
	* bin/dodoc:
	Don't overwrite already-installed files.

	* CYGWIN-PATCHES/README, CYGWIN-PATCHES/setup.hint,
	  README, bin/cygport.in (__prepstrip):
	Do not strip Mono assemblies during postinstall.
	Require binutils for objdump and strip.

	* bin/cygport.in (cygautoreconf):
	Touch README as well to prevent automake failure.

	* CYGWIN-PATCHES/README, TODO, bin/Makefile.am, bin/cygport.in, 
	  data/Makefile.am, data/cygport.conf, data/mirrors,
	  data/sample.cygport, lib/gnome.org.cygclass, lib/perl.cygclass,
	  lib/gtk2-perl.cygclass, lib/kde3.cygclass, lib/ruby-gnome2.cygclass:
	Implement mirror:// SRC_URIs and use throughout.

	* lib/gnome2.cygclass (gnome2_autoreconf):
	Touch files whose presence is required by automake.

	* lib/gst-plugins0.8.cygclass:
	Support gst-monkeysaudio.

	* CYGWIN-PATCHES/README, configure.ac:
	Post-release version bump.

*** 0.2.4 ***

	* ChangeLog, NEWS:
	Tag for release.

	* lib/xorg.cygclass:
	Rename xorg-font-*-{75,100}dpi to xorg-font-*-dpi{75,100}.

	* Makefile.am:
	Since we refer to the README in help, have make install it.

	* lib/kde3.cygclass (kde3_install):
	Install component-specific README files.

	* lib/gst-plugins0.8.cygclass:
	Build smoothwave with the base plugins, as it has no external deps.
	The flag --disable-gdk-pixbuf-loader is broken and defaults to no, so 
	don't pass it.

	* bin/cygport.in (src_prep):
	Verify that SRC_URI is correctly defined.

	* CYGWIN-PATCHES/README,
	  lib/Makefile.am,
	  lib/gst-plugins0.8.cygclass,
	  lib/gst-plugins0.10.cygclass,
	  lib/gstreamer.cygclass:
	Create a new gstreamer cygclass which can be used by both gst-plugins
	as well as other GStreamer packages.

	* lib/gtkmm.cygclass (gtkmm_autoreconf):
	Use cygautoreconf NO_AUTOHEADER.

	* bin/cygport.in (cygautoreconf):
	Accept NO_AUTO* variables to not use certain tools during autoreconf-2.5;
	the most common use will be NO_AUTOHEADER.

	* CYGWIN-PATCHES/README, configure.ac:
	Post-release version bump.

*** 0.2.3 ***
